pridat odkaz na youtube kanal

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{ site.baseurl }}/">Home</a>
+                    <a href="{{ site.baseurl }}/">Domů</a>
+                </li>
+                <li>
+                                <a href="https://www.youtube.com/channel/UCFft3cR2Cl1U-HEVHEODN1g">YouTube</a>
                 </li>
                 {% for page in site.pages %}{% if page.title %}
 				{% if page.url != '/404.html' %}
