--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,16 @@
                             </span>
                         </a>
                     </li>
+                    {% if site.youtube_channel %}
+                    <li>
+                        <a href="https://www.youtube.com/channel/{{ site.youtube_channel }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
                     {% if site.twitter_username %}
                     <li>
                         <a href="https://twitter.com/{{ site.twitter_username }}">
